fixes #8